# file2header

./: .clang-format  .gitignore  CMakeLists.txt  README.md  f2h  main.c  targa.c  targa.h  wave.c  wave.h  wavefront.c  wavefront.h
gl3/: gl3core.h  gl3platform.h  glxextensions.h  wglextensions.h
test/: test.tga  test2.tga
